# cierpliwosc-zasadzka

./: .gitignore  .gitmodules  404.shtml  about.markdown  cierpliwosc.cabal  fulgjon.pub  index.html  keybase.txt  random.txt  site.hs  stack.yaml  test.txt
css/: default.css  syntax.css
posts/: 2018-06-14-o-przestrzeni-niezdegenerowane-wzgledem-metryki.markdown  2019-01-12-pakiet-latex-formulae-hakyll-i-kolor-rownan.markdown  2019-01-14-fulgjon-rusalka.markdown  2019-01-15-ramund-hin-unge-tlumaczenie.markdown  2019-06-13.markdown
templates/: archive.html  default.html  post-list.html  post.html
