name:               cierpliwosc
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , latex-formulae-image >= 0.1.1.0  && < 0.2  
                  , latex-formulae-pandoc >= 0.2.0.1 && < 0.3
                  , latex-formulae-hakyll >= 0.2.0.4 
                  , hakyll >= 4.6 && < 4.13
                  , pandoc-types >= 1.12 && < 1.18
                  , lrucache >= 1.2 && <1.3
                  , containers
                  , skylighting
                  , parsec
                  , regex-compat
                  , MissingH
                  , sort
                  , bifunctors
                  , pandoc
                  , hex
  ghc-options:      -threaded
  default-language: Haskell2010
